--- a/scripts/requirements.txt
+++ b/scripts/requirements.txt
@@ -1,4 +1,11 @@
-mdmparis-defense-finder
-numpy<2.1.0,>=1.26.0
+numpy<2.0.0,>=1.26.0
 tensorflow==2.18.0
 numba<0.61.1,>=0.56.0
+blosc2>=2.3.0
+Flask-SQLAlchemy>=3.0.1
+pandas-stubs
+click>=8.1.3
+CacheControl[filecache]<0.14,>=0.11.7
+matplotlib>=3.8
+mdmparis-defense-finder
+genomad
